--- a/css/style.css
+++ b/css/style.css
@@ -15,40 +15,29 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
-
 :root {
   --color-pink-primary: #eb2f64;
   --color-pink-light: #ff3366;
-  --color-pink-dark: #ba265d;
-}
+  --color-pink-dark: #ba265d; }
 
 * {
   padding: 0px;
-  margin: 0px;
-}
+  margin: 0px; }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; //it is because 1rem = 10px so 10px/16px = 62.5
-}
+  font-size: 62.5%; }
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(
-    to right bottom,
-    var(--color-pink-light),
-    var(--color-pink-dark)
-  );
+  background-image: linear-gradient(to right bottom, var(--color-pink-light), var(--color-pink-dark));
   background-size: cover;
   background-repeat: no-repeat;
-
-  min-height: 100vh;
-}
+  min-height: 100vh; }
