--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,4 @@
-/*
-COLORS
 
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
 
 */
 
@@ -20,6 +6,15 @@ Grey dark 3: #999
   --color-pink-primary: #eb2f64;
   --color-pink-light: #ff3366;
   --color-pink-dark: #ba265d;
+
+  --color-Grey-light-1: #faf9f9;
+  --color-Grey-light-2: #f4f2f2;
+  --color-Grey-light-3: #f0eeee;
+  --color-Grey-light-4: #ccc;
+
+  --color-Grey-dark-1: #333;
+  --color-Grey-dark-2: #777;
+  --color-Grey-dark-3: #999;
 }
 
 * {
