--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,11 +37,13 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  color: var(--color-Grey-dark-2);
   background-image: linear-gradient(
     to right bottom,
     var(--color-pink-light),
     var(--color-pink-dark)
   );
+
   background-size: cover;
   background-repeat: no-repeat;
 
