--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,14 @@
-/*
-COLORS
-
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
 :root {
   --color-pink-primary: #eb2f64;
   --color-pink-light: #ff3366;
-  --color-pink-dark: #ba265d; }
+  --color-pink-dark: #ba265d;
+  --color-Grey-light-1: #faf9f9;
+  --color-Grey-light-2: #f4f2f2;
+  --color-Grey-light-3: #f0eeee;
+  --color-Grey-light-4: #ccc;
+  --color-Grey-dark-1: #333;
+  --color-Grey-dark-2: #777;
+  --color-Grey-dark-3: #999; }
 
 * {
   padding: 0px;
@@ -37,6 +27,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  color: var(--color-Grey-dark-2);
   background-image: linear-gradient(to right bottom, var(--color-pink-light), var(--color-pink-dark));
   background-size: cover;
   background-repeat: no-repeat;
