--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,41 +1,49 @@
-.container {
-  max-width: 120rem;
-  margin: 8rem auto;
-  background-color: var(--color-Grey-light-2);
-  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  min-height: 50rem; }
-
 :root {
   --color-pink-primary: #eb2f64;
   --color-pink-light: #ff3366;
   --color-pink-dark: #ba265d;
+
   --color-Grey-light-1: #faf9f9;
   --color-Grey-light-2: #f4f2f2;
   --color-Grey-light-3: #f0eeee;
   --color-Grey-light-4: #ccc;
+
   --color-Grey-dark-1: #333;
   --color-Grey-dark-2: #777;
-  --color-Grey-dark-3: #999; }
+  --color-Grey-dark-3: #999;
+
+  --shadow-dark:0 2rem 6rem rgba(0,0,0,.3);
+}
 
 * {
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+}
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%; //it is because 1rem = 10px so 10px/16px = 62.5
+}
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-Grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-pink-light), var(--color-pink-dark));
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-pink-light),
+    var(--color-pink-dark)
+  );
+
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+
+  min-height: 100vh;
+}
