--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,9 @@
 .container{
-
+    max-width: 120rem;
+    margin: 8rem auto;
+    background-color: var(--color-Grey-light-2);
+    box-shadow: var(--shadow-dark);
+    min-height: 50rem;
 }
 
 .header{
@@ -15,5 +19,5 @@
 }
 
 .hotel-view{
-    
+
 }
