--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,20 @@
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--color-Grey-light-2);
-  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  background-color: var(--color-Grey-light-1);
+  box-shadow: var(--shadow-dark);
   min-height: 50rem; }
+
+.header {
+  height: 7rem;
+  background-color: #fff;
+  border-bottom: var(--color-Grey-light-2); }
+
+.sidebar {
+  background-color: var(--color-Grey-dark-1); }
+
+.hotel-view {
+  background-color: #fff; }
 
 :root {
   --color-pink-primary: #eb2f64;
@@ -15,7 +26,8 @@
   --color-Grey-light-4: #ccc;
   --color-Grey-dark-1: #333;
   --color-Grey-dark-2: #777;
-  --color-Grey-dark-3: #999; }
+  --color-Grey-dark-3: #999;
+  --shadow-dark:0 2rem 6rem rgba(0,0,0,.3); }
 
 * {
   padding: 0px;
