--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,13 +1,15 @@
 .container{
     max-width: 120rem;
     margin: 8rem auto;
-    background-color: var(--color-Grey-light-2);
+    background-color: var(--color-Grey-light-1);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
 }
 
 .header{
-
+    height: 7rem;
+    background-color: #fff;
+    border-bottom: var(--color-Grey-light-2);
 }
 
 .content{
@@ -15,9 +17,9 @@
 }
 
 .sidebar{
-
+    background-color: var(--color-Grey-dark-1);
 }
 
 .hotel-view{
-
+    background-color: #fff;
 }
