--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -13,13 +13,15 @@
 }
 
 .content{
-
+    display: flex;
 }
 
 .sidebar{
     background-color: var(--color-Grey-dark-1);
+    flex: 1;
 }
 
 .hotel-view{
     background-color: #fff;
+    flex: 3;
 }
