--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-Grey-light-2); }
+  border-bottom: var(--color-Grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 .content {
   display: flex; }
@@ -60,10 +63,17 @@ body {
 .logo {
   height: 3.25rem; }
 
-.search__icon {
-  height: 2rem;
-  width: 2rem; }
+.search {
+  background-color: antiquewhite; }
+  .search__icon {
+    height: 2rem;
+    width: 2rem; }
 
-.user-nav__user-photo {
-  height: 3.75rem;
-  border-radius: 50%; }
+.user-nav {
+  background-color: cadetblue; }
+  .user-nav__icon {
+    height: 2.25rem;
+    width: 2.25rem; }
+  .user-nav__user-photo {
+    height: 3.75rem;
+    border-radius: 50%; }
