--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,13 +2,27 @@
 // LOGO
 .logo {
   height: 3.25rem;
+  margin-left: 3rem;
 }
 
 ////////////////////////////////////////
 // SEARCH
 .search {
   background-color: antiquewhite;
+  flex: 0 0 40%;
   &__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-Grey-light-2);
+    border: none;
+    border-radius: 100px;
+    width: 90%;
+
+    &:focus {
+      outline: none;
+      width: 100%;
+    }
   }
 
   &__button {
@@ -17,7 +31,7 @@
   &__icon {
     height: 2rem;
     width: 2rem;
-}
+  }
 }
 
 ////////////////////////////////////////
