--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,14 +2,18 @@
 // LOGO
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 ////////////////////////////////////////
 // SEARCH
 .search {
-  background-color: antiquewhite;
   flex: 0 0 40%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -17,46 +21,96 @@
     background-color: var(--color-Grey-light-2);
     border: none;
     border-radius: 100px;
+    padding: .7rem 2rem;
     width: 90%;
+    transform: all .2s;
+    margin-right: -3.25rem;
 
     &:focus {
       outline: none;
       width: 100%;
+      background-color: var(--color-Grey-light-3);
+    }
+
+    &::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-Grey-light-4);
+
     }
   }
 
+  &__input:focus + &__button {
+    background-color: var(--color-Grey-light-3);
+  }
+
   &__button {
+    border: none;
+    background-color: var(--color-Grey-light-2);
+
+    &:focus {
+      outline: none;
+    }
+
+    &:active {
+      transform: translateY(2px);
+    }
   }
 
   &__icon {
     height: 2rem;
     width: 2rem;
+    fill: var(--color-Grey-dark-3);
   }
 }
 
 ////////////////////////////////////////
 // USER NAVIGTION
 .user-nav {
-  background-color: cadetblue;
+  align-self: stretch;
+
+  display: flex;
+  align-items: center;
+
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  & > *:hover {
+    background-color: var(--color-Grey-light-2);
+  }
+
   &__icon-box {
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-Grey-dark-2);
   }
 
   &__notification {
-  }
-
-  &user {
+    font-size: .8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color:var(--color-pink-primary);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-  }
-
-  &__user-name {
+    margin-right: 1rem;
   }
 }
