--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,10 +3,12 @@
     margin: 8rem auto;
     background-color: var(--color-Grey-light-1);
     box-shadow: var(--shadow-dark);
+    
     min-height: 50rem;
 }
 
 .header{
+    font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
     border-bottom: var(--color-Grey-light-2);
