--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -114,3 +114,24 @@
     margin-right: 1rem;
   }
 }
+
+
+////////////////////////////////////////
+// SIDE NAVIGATION
+.side-nav {
+  &__item {
+
+  }
+
+  &__link {
+
+  }
+
+  &__icon {
+
+  }
+}
+
+
+////////////////////////////////////////
+// 
