--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,14 @@
 
 .sidebar {
   background-color: var(--color-Grey-dark-1);
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
+  height: 80rem;
   flex: 3; }
 
 :root {
