--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,10 +24,17 @@
 
 .sidebar{
     background-color: var(--color-Grey-dark-1);
+
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view{
     background-color: #fff;
+    height: 80rem;
+
     flex: 3;
 }
