--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: .5rem; }
-  .side-nav__item:hover::before {
+  .side-nav__item:hover::before, .side-nav__item--active::before {
     transform: scaleY(1);
     width: 100%; }
   .side-nav__item::before {
@@ -163,7 +163,7 @@ body {
     background-color: var(--color-pink-primary);
     transform: scaleY(0);
     transform-origin: center;
-    transition: transform .2s, width .4s; }
+    transition: transform 0.2s, width 0.2s cubic-bezier(1, -0.01, 0, 1.01) 0.4s; }
   .side-nav__link:link, .side-nav__link:visited {
     color: var(--color-Grey-light-1);
     text-decoration: none;
@@ -171,7 +171,9 @@ body {
     display: block;
     padding: 1.5rem 3rem;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    position: relative;
+    z-index: 10; }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
