--- a/css/style.css
+++ b/css/style.css
@@ -150,9 +150,12 @@ body {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: .5rem; }
-  .side-nav__item:hover::before, .side-nav__item--active::before {
+  .side-nav__item:hover::before, .side-nav__item--active {
     transform: scaleY(1);
-    width: 100%; }
+    width: 100%;
+    background-color: var(--color-pink-primary); }
+  .side-nav__item:active::before {
+    background-color: var(--color-pink-light); }
   .side-nav__item::before {
     content: "";
     position: absolute;
@@ -163,7 +166,7 @@ body {
     background-color: var(--color-pink-primary);
     transform: scaleY(0);
     transform-origin: center;
-    transition: transform 0.2s, width 0.2s cubic-bezier(1, -0.01, 0, 1.01) 0.4s; }
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, -0.01, 0, 1.01) 0.2s, background-color 0.1s; }
   .side-nav__link:link, .side-nav__link:visited {
     color: var(--color-Grey-light-1);
     text-decoration: none;
