--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,9 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: var(--color-Grey-light-4); }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
