--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -189,3 +189,14 @@
   padding: 2.5rem;
   color: var(--color-Grey-light-4);
 }
+
+////////////////////////////////////////
+// GALLERY
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
