--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -176,9 +176,6 @@
     margin-right: 2rem;
     fill: currentColor ;
   }
-  //&__a {
-    //background-color: aqua;
-  //}
 }
 
 ////////////////////////////////////////
@@ -198,5 +195,43 @@
   &__photo {
     width: 100%;
     display: block;
+  }
+}
+
+
+////////////////////////////////////////
+// HOTEL OVERVIEW
+.overview{
+  display: flex;
+
+  &__heading {
+
+  }
+
+  &__stars {
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-pink-primary);
+  }
+
+  &__location {
+    
+  }
+
+  &__rating {
+
+  }
+
+  &__rating-average {
+
+  }
+
+  &__rating-count {
+
   }
 }
