--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -203,13 +203,20 @@
 // HOTEL OVERVIEW
 .overview{
   display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-Grey-light-2);
 
   &__heading {
-
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
 
   &__stars {
     margin-right: auto;
+    display: flex;
   }
 
   &__icon-star,
@@ -220,7 +227,9 @@
   }
 
   &__location {
-    
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
   }
 
   &__rating {
@@ -233,5 +242,46 @@
 
   &__rating-count {
 
+  }
+}
+
+
+
+////////////////////////////////////////
+// BUTTON INLINE
+.btn-inline {
+  border: none;
+  color: var(--color-pink-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s;
+
+  &:hover {
+    color: var(--color-Grey-dark-1);
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 }
