--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,10 @@ body {
     font-size: 1.2rem;
     display: flex;
     align-items: center; }
+  .overview__icon-location {
+    margin-right: .5rem; }
+  .overview__rating {
+    background-color: var(--color-pink-primary); }
 
 .btn-inline {
   border: none;
