--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-Grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -29,6 +29,25 @@
   height: 80rem;
   flex: 3; }
 
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-Grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 60%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  background-color: firebrick;
+  flex: 1; }
+
 :root {
   --color-pink-primary: #eb2f64;
   --color-pink-light: #ff3366;
@@ -40,7 +59,10 @@
   --color-Grey-dark-1: #333;
   --color-Grey-dark-2: #777;
   --color-Grey-dark-3: #999;
-  --shadow-dark:0 2rem 6rem rgba(0,0,0,.3); }
+  --shadow-dark:0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light:0 2rem 5rem rgba(0,0,0,.06)
+
+  --line: 1px solid var(--color-Grey-light-2); }
 
 * {
   padding: 0px;
@@ -198,7 +220,7 @@ body {
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-Grey-light-2); }
+  border-bottom: var(--line); }
   .overview__heading {
     font-size: 2.25rem;
     font-weight: 300;
