--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-Grey-light-2);
+    border-bottom: var(--line);
     
     display: flex;   
     justify-content: space-between;
@@ -34,7 +34,29 @@
 
 .hotel-view{
     background-color: #fff;
-    height: 80rem;
 
+    height: 80rem;
     flex: 3;
 }
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-Grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 60%;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    background-color: firebrick;
+    flex: 1;
+}   
