--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 .sidebar {
   background-color: var(--color-Grey-dark-1);
-  flex: 1;
+  flex: 0 0 18%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
@@ -27,7 +27,7 @@
 .hotel-view {
   background-color: #fff;
   height: 80rem;
-  flex: 3; }
+  flex: 1; }
 
 .detail {
   display: flex;
