working with flexbox for main

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -302,3 +302,21 @@
     box-shadow: none;
   }
 }
+
+
+
+////////////////////////////////////////
+// PARAGRAPH
+
+
+
+
+////////////////////////////////////////
+// LIST
+
+
+
+
+////////////////////////////////////////
+// RECOMMEND
+  
