buid paragraph's margin

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -307,8 +307,9 @@
 
 ////////////////////////////////////////
 // PARAGRAPH
-
-
+.paragraph:not(:last-of-type){
+  margin-bottom: 2rem;
+}
 
 
 ////////////////////////////////////////
@@ -319,4 +320,3 @@
 
 ////////////////////////////////////////
 // RECOMMEND
-  
