--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,6 @@ body {
   100% {
     transform: scale(1);
     box-shadow: none; } }
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
