--- a/css/style.css
+++ b/css/style.css
@@ -286,3 +286,17 @@ body {
 
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem; }
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap; }
+  .list__item {
+    flex: 50%;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-bottom: .7rem; }
