--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -314,7 +314,24 @@
 
 ////////////////////////////////////////
 // LIST
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
 
+  
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 50%;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-bottom: .7rem;
+  }
+}
 
 
 
