--- a/css/style.css
+++ b/css/style.css
@@ -300,3 +300,13 @@ body {
     flex-grow: 0;
     flex-shrink: 0;
     margin-bottom: .7rem; }
+  .list__item::before {
+    content: "";
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    margin-right: .7rem;
+    background-image: url(../img/svg/chevron-thin-right.svg);
+    background-color: var(--color-pink-primary);
+    -webkit-mask-image: url(../img/SVG/chevron-thin-right.svg);
+    -webkit-mask-size: cover; }
