--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -331,6 +331,24 @@
     flex-shrink: 0;
     margin-bottom: .7rem;
   }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    margin-right: .7rem;
+    background-image: url(../img/svg/chevron-thin-right.svg);
+
+    //Older browsers
+    //background-image: url(../img/SVG/chevron-thin-right.svg);
+    //background-size: cover;
+
+    //Newer vrowsers - mask
+    background-color: var(--color-pink-primary);
+    -webkit-mask-image: url(../img/SVG/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+  }
 }
 
 
