--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,21 @@ body {
     height: 2rem;
     width: 2rem;
     margin-right: .7rem;
-    background-image: url(../img/svg/chevron-thin-right.svg);
+    background-image: url(../img/SVG/chevron-thin-right.svg);
     background-color: var(--color-pink-primary);
-    -webkit-mask-image: url(../img/SVG/chevron-thin-right.svg);
-    -webkit-mask-size: cover; }
+    mask-image: url(../img/SVG/chevron-thin-right.svg);
+    mask-size: cover; }
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-Grey-dark-3);
+  display: flex;
+  align-items: center; }
+  .recommend__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff; }
+    .recommend__photo:not(:last-child) {
+      margin-right: -1.15rem; }
