--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -338,7 +338,7 @@
     height: 2rem;
     width: 2rem;
     margin-right: .7rem;
-    background-image: url(../img/svg/chevron-thin-right.svg);
+    background-image: url(../img/SVG/chevron-thin-right.svg);
 
     //Older browsers
     //background-image: url(../img/SVG/chevron-thin-right.svg);
@@ -346,8 +346,8 @@
 
     //Newer vrowsers - mask
     background-color: var(--color-pink-primary);
-    -webkit-mask-image: url(../img/SVG/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
+    mask-image: url(../img/SVG/chevron-thin-right.svg);
+    mask-size: cover;
   }
 }
 
@@ -355,3 +355,31 @@
 
 ////////////////////////////////////////
 // RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-Grey-dark-3);
+
+
+  display: flex;
+  align-items: center;
+
+  &__count {
+
+  }
+
+  &__frients {
+
+  }
+
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    &:not(:last-child) {
+      margin-right: -1.15rem;
+    }
+  }
+}
