--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
   margin-right: 4.5rem; }
 
 .user-reviews {
-  background-color: firebrick;
+  background-color: #fff;
   flex: 1; }
 
 :root {
@@ -303,8 +303,8 @@ body {
   .list__item::before {
     content: "";
     display: inline-block;
-    height: 2rem;
-    width: 2rem;
+    height: 1rem;
+    width: 1rem;
     margin-right: .7rem;
     background-image: url(../img/SVG/chevron-thin-right.svg);
     background-color: var(--color-pink-primary);
@@ -316,6 +316,8 @@ body {
   color: var(--color-Grey-dark-3);
   display: flex;
   align-items: center; }
+  .recommend__count {
+    margin-right: auto; }
   .recommend__photo {
     box-sizing: content-box;
     height: 4rem;
