--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -383,3 +383,46 @@
     }
   }
 }
+
+
+
+////////////////////////////////////////
+// REVIEWS
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+
+  &__text {
+    margin-bottom: 2rem;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-left: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+
+  }
+
+  &__user-date {
+
+  } 
+
+  &__rating {
+
+  }
+}
