--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,8 @@ body {
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
-  margin-bottom: 3.5rem; }
+  margin-bottom: 3.5rem;
+  position: relative; }
   .review__text {
     margin-bottom: 2rem; }
   .review__user {
@@ -343,3 +344,24 @@ body {
     margin-left: 1.5rem; }
   .review__user-box {
     margin-right: auto; }
+  .review__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--color-Grey-dark-3); }
+  .review__rating {
+    color: var(--color-pink-primary);
+    font-size: 2.2rem;
+    font-weight: 300; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-Grey-light-2);
+    font-family: sans-serif; }
