--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -393,6 +393,7 @@
   box-shadow: var(--shadow-light);
   padding: 3rem;
   margin-bottom: 3.5rem;
+  position: relative;
 
   &__text {
     margin-bottom: 2rem;
@@ -415,14 +416,31 @@
   }
 
   &__user-name {
-
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem;
   }
 
   &__user-date {
-
+    font-size: 1rem;
+    color: var(--color-Grey-dark-3);
   } 
 
   &__rating {
+    color: var(--color-pink-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }
 
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-Grey-light-2);
+    font-family: sans-serif;
   }
 }
